fix: The icon in duplicate expense info card is not aligned

--- a/src/app/shared/components/fy-alert-info/fy-alert-info.component.scss
+++ b/src/app/shared/components/fy-alert-info/fy-alert-info.component.scss
@@ -23,7 +23,6 @@ $container-border: #dfdfe2;
     font-size: 12px;
     width: 100%;
     display: flex;
-    align-items: center;
   }
 
   &--button {
